tests/ui/associated-inherent-types/issue-109071.no_gate.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/issue-109071.rs:8:17
   |
LL |     type Item = &[T];
   |                 ^ explicit lifetime name needed here

error[E0107]: missing generics for struct `Windows`
  --> $DIR/issue-109071.rs:7:9
   |
LL | impl<T> Windows {
   |         ^^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $DIR/issue-109071.rs:5:8
   |
LL | struct Windows<T> {}
   |        ^^^^^^^ -
help: add missing generic argument
   |
LL | impl<T> Windows<T> {
   |                +++

error[E0658]: inherent associated types are unstable
  --> $DIR/issue-109071.rs:8:5
   |
LL |     type Item = &[T];
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
   = help: add `#![feature(inherent_associated_types)]` to the crate attributes to enable

error[E0223]: ambiguous associated type
  --> $DIR/issue-109071.rs:15:22
   |
LL |     fn T() -> Option<Self::Item> {}
   |                      ^^^^^^^^^^ help: use the fully-qualified path: `<Windows<T> as IntoIterator>::Item`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0107, E0223, E0637, E0658.
For more information about an error, try `rustc --explain E0107`.
